attempt5 fixing scaling issue on mobile: use of media query

--- a/style.css
+++ b/style.css
@@ -95,6 +95,6 @@
     }
   
     .image-container {
-      padding-top: 2em; /* Add padding above the image on smaller screens */
+      padding: 2em; /* Add padding above the image on smaller screens */
     }
   }
